Overflow fix

--- a/client/src/components/Chat/Chat.css
+++ b/client/src/components/Chat/Chat.css
@@ -22,6 +22,7 @@
   height: 100%;
   width: 100%;
   border-radius: 20px 20px 0 0px;
+  overflow: hidden;
 }
 
 @media (max-width: 650px) {
